mobile api connected

--- a/www/index.html
+++ b/www/index.html
@@ -197,7 +197,29 @@
         
 
         <div name="chick_contact_form" class="chick_contact_form">
-          <span class="chick_form_bold">Your Name:</span>
+            <span class="chick_form_bold">Your First Name:</span>
+            <span class="chick_form"> Sign up, cluckie-cluck.</span>
+            </br>
+            <input type="text" name="chick_first_name"> 
+            </br>
+            <span class="chick_form_bold">Your Last Name:</span>
+            <span class="chick_form"> Tell me more, cluckie-cluck.</span>
+            </br>
+            <input type="text" name="chick_last_name"> 
+            </br>
+            <span class="chick_form_bold"> Email Address: </span><span class="chick_form"> Let chicken lovers contact you.</span>
+            </br>
+            <input type="text" name="chick_e-mail">
+            </br>
+            <span class="chick_form_bold"> Password: </span>
+            <span class="chick_form"> Trust us with all your chicken secrets. We'll understand. </span>
+            </br>
+            <input type="text" name="chick_password" class="chick_password">
+            </br>
+            <button name="chick_signup_button" id="chick_signup_button" class="chick_all_button">Join Us!</button>
+            <div class="chicken_output chick_login_txt">  </div>
+        </div>
+          <!-- <span class="chick_form_bold">Your Name:</span>
           <span class="chick_form"> Sign up, cluckie-cluck.</span>
           </br>
           <input type="text" name="chick_name"> </br>
@@ -231,7 +253,7 @@
           <textarea name="message" class=></textarea></br>
           <button name="chick_signup_button" id="chick_signup_button" class="chick_all_button">Join Us!</button>
           <div class="chicken_output chick_login_txt">  </div>
-        </div>
+        </div> -->
 
         <div> Have a chicken-related question? </div>
           <a href=mailto:cartoonchickencult@google-yah.com?subject=Recruiting%20cult%20members> E-mail us, cluckie-cluck </a>
